added comments and some fixes